--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <script type="text/javascript">
        // alert("Hello World!");
-       console.log("Hello World, This my first code of JS which i run in console");
+       console.log("Hello World, This is my first code of JS which I run in console");
     </script>
 </body>
 </html>
